# near-starter-app

./: README.md  package.json
contract/: Cargo.toml
contract/res/: near_starter_app.wasm
contract/src/: lib.rs  models.rs  utils.rs
src/: App.js  global.css  index.html  index.js  utils.js
src/components/: CreateEvents.js  ListEvents.js
